--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   font-family: "Poor Story";
 }
 
+.App {
+  min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 body {
   background-color: hsl(0, 0%, 96%);
   display: flex;
@@ -13,12 +19,6 @@ body {
   min-height: 100vh;
   margin: 0px;
   /* vh: viewport`s height, 현재 화면 크기의 100%를 최소 높이로 하겠다 */
-}
-
-.App {
-  min-height: 100vh;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 /* 너비가 650픽셀 이상일 때에만 적용되는 css */
@@ -272,4 +272,72 @@ header .head_btn_right {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/* Diary 상세 페이지 */
+.DiaryPage section {
+  width: 100%;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.DiaryPage h4 {
+  font-size: 19px;
+  font-weight: 700;
+}
+
+.DiaryPage .diary_img_wrapper {
+  background-color: #ececec;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.DiaryPage .diary_img_wrapper_1 {
+  background-color: #64c964;
+}
+
+.DiaryPage .diary_img_wrapper_2 {
+  background-color: #9dd772;
+}
+
+.DiaryPage .diary_img_wrapper_3 {
+  background-color: #fdce17;
+}
+
+.DiaryPage .diary_img_wrapper_4 {
+  background-color: #fd8446;
+}
+
+.DiaryPage .diary_img_wrapper_5 {
+  background-color: #fd565f;
+}
+
+.DiaryPage .emotion_discript {
+  font-size: 16px;
+  color: #fff;
+}
+
+.DiaryPage .diary_content_wrapper {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 5px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+
+.DiaryPage .diary_content_wrapper p {
+  padding: 20px;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Gaegu";
+  font-weight: 400;
+  line-height: 2.5;
 }
